--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "start": "ts-node src/app.ts",
     "dev": "nodemon --watch 'src/**/*.ts' --watch 'src/*.ts' --exec ts-node src/app.ts",
     "build": "tsc",
-    "serve": "node dist/app.js"
+    "serve": "node dist/app.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +15,12 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.10",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4",
+    "ts-jest": "^29.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   },
