--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,8 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
